impl observer/observable

--- a/examples/buffer.ipynb
+++ b/examples/buffer.ipynb
@@ -51,7 +51,7 @@
    ],
    "source": [
     "$LOAD_PATH << File.dirname(__FILE__) + \"/../lib\"\n",
-    "require 'audio_stream/core_ext'\n",
+    "require 'audio_stream'\n",
     "\n",
     "include AudioStream\n",
     "include AudioStream::Fx\n",
@@ -118,7 +118,7 @@
    ],
    "source": [
     "$LOAD_PATH << File.dirname(__FILE__) + \"/../lib\"\n",
-    "require 'audio_stream/core_ext'\n",
+    "require 'audio_stream'\n",
     "\n",
     "include AudioStream\n",
     "include AudioStream::Fx\n",
